$Id$

MIDIO128 V3.012
~~~~~~~~~~~~~~~

   o USB MSD driver: changed endpoint to avoid conflict with MIDI driver.
     Note that it's still not possible to use MSD and MIDI in parallel,
     but Windows and MacOS should accept the connection (again).

   o the .MID menu got a subhierarchy to improve the oversight: Play and Ports

   o with the new ConvertNoteOffToOn0 setting in the .MIO file incoming
     Note Off events will now be converted to Note On with velocity 0.
     This change is active by default - means: it can be optionally
     displayed in the .MIO file



MIDIO128 V3.011
~~~~~~~~~~~~~~~

   o USB device settings have been changed.
     IMPORTANT: please install MIOS32 Bootloader V1.010 before uploading
     the application! Otherwise code upload via USB won't work anymore!
     (Backup: upload via MIDI IN1/OUT1)

   o 4 USB ports are enabled now.
     Note: if your operating system still displays only a single MIDI port for USB,
     then unplug the USB cable and remove the USB MIDI driver in your system setup,
     so that the driver be installed again once the core module has been re-connected.
     E.g. under MacOS this can be done with the Audio-MIDI Setup application
     (search for "Audio" in Spotlight)

   o support for GM5 driver under Windows.
     - upload the application with MIOS Studio
     - close MIOS Studio
     - install the GM5 driver which can be downloaded from http://www.ucapps.de/mios32_download.html
     - start MIOS Studio -> 4 "GM5" USB ports should be visible

   o 4 MIDI IN/OUT ports are enabled now.
     Pin mapping for LPC17 (see also http://www.ucapps.de/mbhp/mbhp_core_lpc17_midi3_midi4_extension.pdf):
     - MIDI OUT3 is available at J5B.A7
     - MIDI IN3 is available at J5B.A6
     - MIDI OUT4 is available at J4B.SD
     - MIDI IN4 is available at J4B.SC

     since MIDI IN3/OUT3 allocate analog input pins, AIN Pin #6 and #7 is
     not available anymore!
