@@ -188,6 +188,168 @@ midio_patch_din_entry_t  midio_patch_din[MIDIO_PATCH_NUM_DIN] = {
   {  0x1011,  0,   0xb0, 0x4d, 0x7f,  0xb0, 0x4d, 0x00 }, // 16.D5
   {  0x1011,  0,   0xb0, 0x4e, 0x7f,  0xb0, 0x4e, 0x00 }, // 16.D6
   {  0x1011,  0,   0xb0, 0x4f, 0x7f,  0xb0, 0x4f, 0x00 }, // 16.D7
+
+#if MIDIO_PATCH_NUM_DIN > 128 // we assume 256 (32 SRs)
+  // ports   mode     ON event           OFF event           SR/Pin
+  {  0x1011,  0,   0x91, 0x30, 0x7f,  0x91, 0x30, 0x00 }, // 17.D0
+  {  0x1011,  0,   0x91, 0x31, 0x7f,  0x91, 0x31, 0x00 }, // 17.D1
+  {  0x1011,  0,   0x91, 0x32, 0x7f,  0x91, 0x32, 0x00 }, // 17.D2
+  {  0x1011,  0,   0x91, 0x33, 0x7f,  0x91, 0x33, 0x00 }, // 17.D3
+  {  0x1011,  0,   0x91, 0x34, 0x7f,  0x91, 0x34, 0x00 }, // 17.D4
+  {  0x1011,  0,   0x91, 0x35, 0x7f,  0x91, 0x35, 0x00 }, // 17.D5
+  {  0x1011,  0,   0x91, 0x36, 0x7f,  0x91, 0x36, 0x00 }, // 17.D6
+  {  0x1011,  0,   0x91, 0x37, 0x7f,  0x91, 0x37, 0x00 }, // 17.D7
+
+  // ports   mode     ON event           OFF event           SR/Pin
+  {  0x1011,  0,   0x91, 0x38, 0x7f,  0x91, 0x38, 0x00 }, // 18.D0
+  {  0x1011,  0,   0x91, 0x39, 0x7f,  0x91, 0x39, 0x00 }, // 18.D1
+  {  0x1011,  0,   0x91, 0x3a, 0x7f,  0x91, 0x3a, 0x00 }, // 18.D2
+  {  0x1011,  0,   0x91, 0x3b, 0x7f,  0x91, 0x3b, 0x00 }, // 18.D3
+  {  0x1011,  0,   0x91, 0x3c, 0x7f,  0x91, 0x3c, 0x00 }, // 18.D4
+  {  0x1011,  0,   0x91, 0x3d, 0x7f,  0x91, 0x3d, 0x00 }, // 18.D5
+  {  0x1011,  0,   0x91, 0x3e, 0x7f,  0x91, 0x3e, 0x00 }, // 18.D6
+  {  0x1011,  0,   0x91, 0x3f, 0x7f,  0x91, 0x3f, 0x00 }, // 18.D7
+
+  // ports   mode     ON event           OFF event           SR/Pin
+  {  0x1011,  0,   0x91, 0x40, 0x7f,  0x91, 0x40, 0x00 }, // 19.D0
+  {  0x1011,  0,   0x91, 0x41, 0x7f,  0x91, 0x41, 0x00 }, // 19.D1
+  {  0x1011,  0,   0x91, 0x42, 0x7f,  0x91, 0x42, 0x00 }, // 19.D2
+  {  0x1011,  0,   0x91, 0x43, 0x7f,  0x91, 0x43, 0x00 }, // 19.D3
+  {  0x1011,  0,   0x91, 0x44, 0x7f,  0x91, 0x44, 0x00 }, // 19.D4
+  {  0x1011,  0,   0x91, 0x45, 0x7f,  0x91, 0x45, 0x00 }, // 19.D5
+  {  0x1011,  0,   0x91, 0x46, 0x7f,  0x91, 0x46, 0x00 }, // 19.D6
+  {  0x1011,  0,   0x91, 0x47, 0x7f,  0x91, 0x47, 0x00 }, // 19.D7
+
+  // ports   mode     ON event           OFF event           SR/Pin
+  {  0x1011,  0,   0x91, 0x48, 0x7f,  0x91, 0x48, 0x00 }, // 20.D0
+  {  0x1011,  0,   0x91, 0x49, 0x7f,  0x91, 0x49, 0x00 }, // 20.D1
+  {  0x1011,  0,   0x91, 0x4a, 0x7f,  0x91, 0x4a, 0x00 }, // 20.D2
+  {  0x1011,  0,   0x91, 0x4b, 0x7f,  0x91, 0x4b, 0x00 }, // 20.D3
+  {  0x1011,  0,   0x91, 0x4c, 0x7f,  0x91, 0x4c, 0x00 }, // 20.D4
+  {  0x1011,  0,   0x91, 0x4d, 0x7f,  0x91, 0x4d, 0x00 }, // 20.D5
+  {  0x1011,  0,   0x91, 0x4e, 0x7f,  0x91, 0x4e, 0x00 }, // 20.D6
+  {  0x1011,  0,   0x91, 0x4f, 0x7f,  0x91, 0x4f, 0x00 }, // 20.D7
+
+  // ports   mode     ON event           OFF event           SR/Pin
+  {  0x1011,  0,   0x91, 0x50, 0x7f,  0x91, 0x50, 0x00 }, // 21.D0
+  {  0x1011,  0,   0x91, 0x51, 0x7f,  0x91, 0x51, 0x00 }, // 21.D1
+  {  0x1011,  0,   0x91, 0x52, 0x7f,  0x91, 0x52, 0x00 }, // 21.D2
+  {  0x1011,  0,   0x91, 0x53, 0x7f,  0x91, 0x53, 0x00 }, // 21.D3
+  {  0x1011,  0,   0x91, 0x54, 0x7f,  0x91, 0x54, 0x00 }, // 21.D4
+  {  0x1011,  0,   0x91, 0x55, 0x7f,  0x91, 0x55, 0x00 }, // 21.D5
+  {  0x1011,  0,   0x91, 0x56, 0x7f,  0x91, 0x56, 0x00 }, // 21.D6
+  {  0x1011,  0,   0x91, 0x57, 0x7f,  0x91, 0x57, 0x00 }, // 21.D7
+
+  // ports   mode     ON event           OFF event           SR/Pin
+  {  0x1011,  0,   0x91, 0x58, 0x7f,  0x91, 0x58, 0x00 }, // 22.D0
+  {  0x1011,  0,   0x91, 0x59, 0x7f,  0x91, 0x59, 0x00 }, // 22.D1
+  {  0x1011,  0,   0x91, 0x5a, 0x7f,  0x91, 0x5a, 0x00 }, // 22.D2
+  {  0x1011,  0,   0x91, 0x5b, 0x7f,  0x91, 0x5b, 0x00 }, // 22.D3
+  {  0x1011,  0,   0x91, 0x5c, 0x7f,  0x91, 0x5c, 0x00 }, // 22.D4
+  {  0x1011,  0,   0x91, 0x5d, 0x7f,  0x91, 0x5d, 0x00 }, // 22.D5
+  {  0x1011,  0,   0x91, 0x5e, 0x7f,  0x91, 0x5e, 0x00 }, // 22.D6
+  {  0x1011,  0,   0x91, 0x5f, 0x7f,  0x91, 0x5f, 0x00 }, // 22.D7
+
+  // ports   mode     ON event           OFF event           SR/Pin
+  {  0x1011,  0,   0x91, 0x60, 0x7f,  0x91, 0x60, 0x00 }, // 23.D0
+  {  0x1011,  0,   0x91, 0x61, 0x7f,  0x91, 0x61, 0x00 }, // 23.D1
+  {  0x1011,  0,   0x91, 0x62, 0x7f,  0x91, 0x62, 0x00 }, // 23.D2
+  {  0x1011,  0,   0x91, 0x63, 0x7f,  0x91, 0x63, 0x00 }, // 23.D3
+  {  0x1011,  0,   0x91, 0x64, 0x7f,  0x91, 0x64, 0x00 }, // 23.D4
+  {  0x1011,  0,   0x91, 0x65, 0x7f,  0x91, 0x65, 0x00 }, // 23.D5
+  {  0x1011,  0,   0x91, 0x66, 0x7f,  0x91, 0x66, 0x00 }, // 23.D6
+  {  0x1011,  0,   0x91, 0x67, 0x7f,  0x91, 0x67, 0x00 }, // 23.D7
+
+  // ports   mode     ON event           OFF event           SR/Pin
+  {  0x1011,  0,   0x91, 0x68, 0x7f,  0x91, 0x68, 0x00 }, // 24.D0
+  {  0x1011,  0,   0x91, 0x69, 0x7f,  0x91, 0x69, 0x00 }, // 24.D1
+  {  0x1011,  0,   0x91, 0x6a, 0x7f,  0x91, 0x6a, 0x00 }, // 24.D2
+  {  0x1011,  0,   0x91, 0x6b, 0x7f,  0x91, 0x6b, 0x00 }, // 24.D3
+  {  0x1011,  0,   0x91, 0x6c, 0x7f,  0x91, 0x6c, 0x00 }, // 24.D4
+  {  0x1011,  0,   0x91, 0x6d, 0x7f,  0x91, 0x6d, 0x00 }, // 24.D5
+  {  0x1011,  0,   0x91, 0x6e, 0x7f,  0x91, 0x6e, 0x00 }, // 24.D6
+  {  0x1011,  0,   0x91, 0x6f, 0x7f,  0x91, 0x6f, 0x00 }, // 24.D7
+
+  // ports   mode     ON event           OFF event           SR/Pin
+  {  0x1011,  0,   0xb1, 0x10, 0x7f,  0xb1, 0x10, 0x00 }, // 25.D0
+  {  0x1011,  0,   0xb1, 0x11, 0x7f,  0xb1, 0x11, 0x00 }, // 25.D1
+  {  0x1011,  0,   0xb1, 0x12, 0x7f,  0xb1, 0x12, 0x00 }, // 25.D2
+  {  0x1011,  0,   0xb1, 0x13, 0x7f,  0xb1, 0x13, 0x00 }, // 25.D3
+  {  0x1011,  0,   0xb1, 0x14, 0x7f,  0xb1, 0x14, 0x00 }, // 25.D4
+  {  0x1011,  0,   0xb1, 0x15, 0x7f,  0xb1, 0x15, 0x00 }, // 25.D5
+  {  0x1011,  0,   0xb1, 0x16, 0x7f,  0xb1, 0x16, 0x00 }, // 25.D6
+  {  0x1011,  0,   0xb1, 0x17, 0x7f,  0xb1, 0x17, 0x00 }, // 25.D7
+
+  // ports   mode     ON event           OFF event           SR/Pin
+  {  0x1011,  0,   0xb1, 0x18, 0x7f,  0xb1, 0x18, 0x00 }, // 26.D0
+  {  0x1011,  0,   0xb1, 0x19, 0x7f,  0xb1, 0x19, 0x00 }, // 26.D1
+  {  0x1011,  0,   0xb1, 0x1a, 0x7f,  0xb1, 0x1a, 0x00 }, // 26.D2
+  {  0x1011,  0,   0xb1, 0x1b, 0x7f,  0xb1, 0x1b, 0x00 }, // 26.D3
+  {  0x1011,  0,   0xb1, 0x1c, 0x7f,  0xb1, 0x1c, 0x00 }, // 26.D4
+  {  0x1011,  0,   0xb1, 0x1d, 0x7f,  0xb1, 0x1d, 0x00 }, // 26.D5
+  {  0x1011,  0,   0xb1, 0x1e, 0x7f,  0xb1, 0x1e, 0x00 }, // 26.D6
+  {  0x1011,  0,   0xb1, 0x1f, 0x7f,  0xb1, 0x1f, 0x00 }, // 26.D7
+
+  // ports   mode     ON event           OFF event           SR/Pin
+  {  0x1011,  0,   0xb1, 0x20, 0x7f,  0xb1, 0x20, 0x00 }, // 27.D0
+  {  0x1011,  0,   0xb1, 0x21, 0x7f,  0xb1, 0x21, 0x00 }, // 27.D1
+  {  0x1011,  0,   0xb1, 0x22, 0x7f,  0xb1, 0x22, 0x00 }, // 27.D2
+  {  0x1011,  0,   0xb1, 0x23, 0x7f,  0xb1, 0x23, 0x00 }, // 27.D3
+  {  0x1011,  0,   0xb1, 0x24, 0x7f,  0xb1, 0x24, 0x00 }, // 27.D4
+  {  0x1011,  0,   0xb1, 0x25, 0x7f,  0xb1, 0x25, 0x00 }, // 27.D5
+  {  0x1011,  0,   0xb1, 0x26, 0x7f,  0xb1, 0x26, 0x00 }, // 27.D6
+  {  0x1011,  0,   0xb1, 0x27, 0x7f,  0xb1, 0x27, 0x00 }, // 27.D7
+
+  // ports   mode     ON event           OFF event           SR/Pin
+  {  0x1011,  0,   0xb1, 0x28, 0x7f,  0xb1, 0x28, 0x00 }, // 28.D0
+  {  0x1011,  0,   0xb1, 0x29, 0x7f,  0xb1, 0x29, 0x00 }, // 28.D1
+  {  0x1011,  0,   0xb1, 0x2a, 0x7f,  0xb1, 0x2a, 0x00 }, // 28.D2
+  {  0x1011,  0,   0xb1, 0x2b, 0x7f,  0xb1, 0x2b, 0x00 }, // 28.D3
+  {  0x1011,  0,   0xb1, 0x2c, 0x7f,  0xb1, 0x2c, 0x00 }, // 28.D4
+  {  0x1011,  0,   0xb1, 0x2d, 0x7f,  0xb1, 0x2d, 0x00 }, // 28.D5
+  {  0x1011,  0,   0xb1, 0x2e, 0x7f,  0xb1, 0x2e, 0x00 }, // 28.D6
+  {  0x1011,  0,   0xb1, 0x2f, 0x7f,  0xb1, 0x2f, 0x00 }, // 28.D7
+
+  // ports   mode     ON event           OFF event           SR/Pin
+  {  0x1011,  0,   0xb1, 0x30, 0x7f,  0xb1, 0x30, 0x00 }, // 29.D0
+  {  0x1011,  0,   0xb1, 0x31, 0x7f,  0xb1, 0x31, 0x00 }, // 29.D1
+  {  0x1011,  0,   0xb1, 0x32, 0x7f,  0xb1, 0x32, 0x00 }, // 29.D2
+  {  0x1011,  0,   0xb1, 0x33, 0x7f,  0xb1, 0x33, 0x00 }, // 29.D3
+  {  0x1011,  0,   0xb1, 0x34, 0x7f,  0xb1, 0x34, 0x00 }, // 29.D4
+  {  0x1011,  0,   0xb1, 0x35, 0x7f,  0xb1, 0x35, 0x00 }, // 29.D5
+  {  0x1011,  0,   0xb1, 0x36, 0x7f,  0xb1, 0x36, 0x00 }, // 29.D6
+  {  0x1011,  0,   0xb1, 0x37, 0x7f,  0xb1, 0x37, 0x00 }, // 29.D7
+
+  // ports   mode     ON event           OFF event           SR/Pin
+  {  0x1011,  0,   0xb1, 0x38, 0x7f,  0xb1, 0x38, 0x00 }, // 30.D0
+  {  0x1011,  0,   0xb1, 0x39, 0x7f,  0xb1, 0x39, 0x00 }, // 30.D1
+  {  0x1011,  0,   0xb1, 0x3a, 0x7f,  0xb1, 0x3a, 0x00 }, // 30.D2
+  {  0x1011,  0,   0xb1, 0x3b, 0x7f,  0xb1, 0x3b, 0x00 }, // 30.D3
+  {  0x1011,  0,   0xb1, 0x3c, 0x7f,  0xb1, 0x3c, 0x00 }, // 30.D4
+  {  0x1011,  0,   0xb1, 0x3d, 0x7f,  0xb1, 0x3d, 0x00 }, // 30.D5
+  {  0x1011,  0,   0xb1, 0x3e, 0x7f,  0xb1, 0x3e, 0x00 }, // 30.D6
+  {  0x1011,  0,   0xb1, 0x3f, 0x7f,  0xb1, 0x3f, 0x00 }, // 30.D7
+
+  // ports   mode     ON event           OFF event           SR/Pin
+  {  0x1011,  0,   0xb1, 0x40, 0x7f,  0xb1, 0x40, 0x00 }, // 31.D0
+  {  0x1011,  0,   0xb1, 0x41, 0x7f,  0xb1, 0x41, 0x00 }, // 31.D1
+  {  0x1011,  0,   0xb1, 0x42, 0x7f,  0xb1, 0x42, 0x00 }, // 31.D2
+  {  0x1011,  0,   0xb1, 0x43, 0x7f,  0xb1, 0x43, 0x00 }, // 31.D3
+  {  0x1011,  0,   0xb1, 0x44, 0x7f,  0xb1, 0x44, 0x00 }, // 31.D4
+  {  0x1011,  0,   0xb1, 0x45, 0x7f,  0xb1, 0x45, 0x00 }, // 31.D5
+  {  0x1011,  0,   0xb1, 0x46, 0x7f,  0xb1, 0x46, 0x00 }, // 31.D6
+  {  0x1011,  0,   0xb1, 0x47, 0x7f,  0xb1, 0x47, 0x00 }, // 31.D7
+
+  // ports   mode     ON event           OFF event           SR/Pin
+  {  0x1011,  0,   0xb1, 0x48, 0x7f,  0xb1, 0x48, 0x00 }, // 32.D0
+  {  0x1011,  0,   0xb1, 0x49, 0x7f,  0xb1, 0x49, 0x00 }, // 32.D1
+  {  0x1011,  0,   0xb1, 0x4a, 0x7f,  0xb1, 0x4a, 0x00 }, // 32.D2
+  {  0x1011,  0,   0xb1, 0x4b, 0x7f,  0xb1, 0x4b, 0x00 }, // 32.D3
+  {  0x1011,  0,   0xb1, 0x4c, 0x7f,  0xb1, 0x4c, 0x00 }, // 32.D4
+  {  0x1011,  0,   0xb1, 0x4d, 0x7f,  0xb1, 0x4d, 0x00 }, // 32.D5
+  {  0x1011,  0,   0xb1, 0x4e, 0x7f,  0xb1, 0x4e, 0x00 }, // 32.D6
+  {  0x1011,  0,   0xb1, 0x4f, 0x7f,  0xb1, 0x4f, 0x00 }, // 32.D7
+#endif
 };
 
 midio_patch_dout_entry_t midio_patch_dout[MIDIO_PATCH_NUM_DOUT] = {
@@ -350,6 +512,168 @@ midio_patch_dout_entry_t midio_patch_dout[MIDIO_PATCH_NUM_DOUT] = {
   {  0x1011, 0xb0, 0x4d }, // 16.D2
   {  0x1011, 0xb0, 0x4e }, // 16.D1
   {  0x1011, 0xb0, 0x4f }, // 16.D0
+
+#if MIDIO_PATCH_NUM_DOUT > 128 // we assume 256 (32 SRs)
+  // ports   event           SR/Pin
+  {  0x1011, 0x91, 0x30 }, // 17.D7
+  {  0x1011, 0x91, 0x31 }, // 17.D6
+  {  0x1011, 0x91, 0x32 }, // 17.D5
+  {  0x1011, 0x91, 0x33 }, // 17.D4
+  {  0x1011, 0x91, 0x34 }, // 17.D3
+  {  0x1011, 0x91, 0x35 }, // 17.D2
+  {  0x1011, 0x91, 0x36 }, // 17.D1
+  {  0x1011, 0x91, 0x37 }, // 17.D0
+
+  // ports   event           SR/Pin
+  {  0x1011, 0x91, 0x38 }, // 18.D7
+  {  0x1011, 0x91, 0x39 }, // 18.D6
+  {  0x1011, 0x91, 0x3a }, // 18.D5
+  {  0x1011, 0x91, 0x3b }, // 18.D4
+  {  0x1011, 0x91, 0x3c }, // 18.D3
+  {  0x1011, 0x91, 0x3d }, // 18.D2
+  {  0x1011, 0x91, 0x3e }, // 18.D1
+  {  0x1011, 0x91, 0x3f }, // 18.D0
+
+  // ports   event           SR/Pin
+  {  0x1011, 0x91, 0x40 }, // 19.D7
+  {  0x1011, 0x91, 0x41 }, // 19.D6
+  {  0x1011, 0x91, 0x42 }, // 19.D5
+  {  0x1011, 0x91, 0x43 }, // 19.D4
+  {  0x1011, 0x91, 0x44 }, // 19.D3
+  {  0x1011, 0x91, 0x45 }, // 19.D2
+  {  0x1011, 0x91, 0x46 }, // 19.D1
+  {  0x1011, 0x91, 0x47 }, // 19.D0
+
+  // ports   event           SR/Pin
+  {  0x1011, 0x91, 0x48 }, // 20.D7
+  {  0x1011, 0x91, 0x49 }, // 20.D6
+  {  0x1011, 0x91, 0x4a }, // 20.D5
+  {  0x1011, 0x91, 0x4b }, // 20.D4
+  {  0x1011, 0x91, 0x4c }, // 20.D3
+  {  0x1011, 0x91, 0x4d }, // 20.D2
+  {  0x1011, 0x91, 0x4e }, // 20.D1
+  {  0x1011, 0x91, 0x4f }, // 20.D0
+
+  // ports   event           SR/Pin
+  {  0x1011, 0x91, 0x50 }, // 21.D7
+  {  0x1011, 0x91, 0x51 }, // 21.D6
+  {  0x1011, 0x91, 0x52 }, // 21.D5
+  {  0x1011, 0x91, 0x53 }, // 21.D4
+  {  0x1011, 0x91, 0x54 }, // 21.D3
+  {  0x1011, 0x91, 0x55 }, // 21.D2
+  {  0x1011, 0x91, 0x56 }, // 21.D1
+  {  0x1011, 0x91, 0x57 }, // 21.D0
+
+  // ports   event           SR/Pin
+  {  0x1011, 0x91, 0x58 }, // 22.D7
+  {  0x1011, 0x91, 0x59 }, // 22.D6
+  {  0x1011, 0x91, 0x5a }, // 22.D5
+  {  0x1011, 0x91, 0x5b }, // 22.D4
+  {  0x1011, 0x91, 0x5c }, // 22.D3
+  {  0x1011, 0x91, 0x5d }, // 22.D2
+  {  0x1011, 0x91, 0x5e }, // 22.D1
+  {  0x1011, 0x91, 0x5f }, // 22.D0
+
+  // ports   event           SR/Pin
+  {  0x1011, 0x91, 0x60 }, // 23.D7
+  {  0x1011, 0x91, 0x61 }, // 23.D6
+  {  0x1011, 0x91, 0x62 }, // 23.D5
+  {  0x1011, 0x91, 0x63 }, // 23.D4
+  {  0x1011, 0x91, 0x64 }, // 23.D3
+  {  0x1011, 0x91, 0x65 }, // 23.D2
+  {  0x1011, 0x91, 0x66 }, // 23.D1
+  {  0x1011, 0x91, 0x67 }, // 23.D0
+
+  // ports   event           SR/Pin
+  {  0x1011, 0x91, 0x68 }, // 24.D7
+  {  0x1011, 0x91, 0x69 }, // 24.D6
+  {  0x1011, 0x91, 0x6a }, // 24.D5
+  {  0x1011, 0x91, 0x6b }, // 24.D4
+  {  0x1011, 0x91, 0x6c }, // 24.D3
+  {  0x1011, 0x91, 0x6d }, // 24.D2
+  {  0x1011, 0x91, 0x6e }, // 24.D1
+  {  0x1011, 0x91, 0x6f }, // 24.D0
+
+  // ports   event           SR/Pin
+  {  0x1011, 0xb1, 0x10 }, // 25.D7
+  {  0x1011, 0xb1, 0x11 }, // 25.D6
+  {  0x1011, 0xb1, 0x12 }, // 25.D5
+  {  0x1011, 0xb1, 0x13 }, // 25.D4
+  {  0x1011, 0xb1, 0x14 }, // 25.D3
+  {  0x1011, 0xb1, 0x15 }, // 25.D2
+  {  0x1011, 0xb1, 0x16 }, // 25.D1
+  {  0x1011, 0xb1, 0x17 }, // 25.D0
+
+  // ports   event           SR/Pin
+  {  0x1011, 0xb1, 0x18 }, // 26.D7
+  {  0x1011, 0xb1, 0x19 }, // 26.D6
+  {  0x1011, 0xb1, 0x1a }, // 26.D5
+  {  0x1011, 0xb1, 0x1b }, // 26.D4
+  {  0x1011, 0xb1, 0x1c }, // 26.D3
+  {  0x1011, 0xb1, 0x1d }, // 26.D2
+  {  0x1011, 0xb1, 0x1e }, // 26.D1
+  {  0x1011, 0xb1, 0x1f }, // 26.D0
+
+  // ports   event           SR/Pin
+  {  0x1011, 0xb1, 0x20 }, // 27.D7
+  {  0x1011, 0xb1, 0x21 }, // 27.D6
+  {  0x1011, 0xb1, 0x22 }, // 27.D5
+  {  0x1011, 0xb1, 0x23 }, // 27.D4
+  {  0x1011, 0xb1, 0x24 }, // 27.D3
+  {  0x1011, 0xb1, 0x25 }, // 27.D2
+  {  0x1011, 0xb1, 0x26 }, // 27.D1
+  {  0x1011, 0xb1, 0x27 }, // 27.D0
+
+  // ports   event           SR/Pin
+  {  0x1011, 0xb1, 0x28 }, // 28.D7
+  {  0x1011, 0xb1, 0x29 }, // 28.D6
+  {  0x1011, 0xb1, 0x2a }, // 28.D5
+  {  0x1011, 0xb1, 0x2b }, // 28.D4
+  {  0x1011, 0xb1, 0x2c }, // 28.D3
+  {  0x1011, 0xb1, 0x2d }, // 28.D2
+  {  0x1011, 0xb1, 0x2e }, // 28.D1
+  {  0x1011, 0xb1, 0x2f }, // 28.D0
+
+  // ports   event           SR/Pin
+  {  0x1011, 0xb1, 0x30 }, // 29.D7
+  {  0x1011, 0xb1, 0x31 }, // 29.D6
+  {  0x1011, 0xb1, 0x32 }, // 29.D5
+  {  0x1011, 0xb1, 0x33 }, // 29.D4
+  {  0x1011, 0xb1, 0x34 }, // 29.D3
+  {  0x1011, 0xb1, 0x35 }, // 29.D2
+  {  0x1011, 0xb1, 0x36 }, // 29.D1
+  {  0x1011, 0xb1, 0x37 }, // 29.D0
+
+  // ports   event           SR/Pin
+  {  0x1011, 0xb1, 0x38 }, // 30.D7
+  {  0x1011, 0xb1, 0x39 }, // 30.D6
+  {  0x1011, 0xb1, 0x3a }, // 30.D5
+  {  0x1011, 0xb1, 0x3b }, // 30.D4
+  {  0x1011, 0xb1, 0x3c }, // 30.D3
+  {  0x1011, 0xb1, 0x3d }, // 30.D2
+  {  0x1011, 0xb1, 0x3e }, // 30.D1
+  {  0x1011, 0xb1, 0x3f }, // 30.D0
+
+  // ports   event           SR/Pin
+  {  0x1011, 0xb1, 0x40 }, // 31.D7
+  {  0x1011, 0xb1, 0x41 }, // 31.D6
+  {  0x1011, 0xb1, 0x42 }, // 31.D5
+  {  0x1011, 0xb1, 0x43 }, // 31.D4
+  {  0x1011, 0xb1, 0x44 }, // 31.D3
+  {  0x1011, 0xb1, 0x45 }, // 31.D2
+  {  0x1011, 0xb1, 0x46 }, // 31.D1
+  {  0x1011, 0xb1, 0x47 }, // 31.D0
+
+  // ports   event           SR/Pin
+  {  0x1011, 0xb1, 0x48 }, // 32.D7
+  {  0x1011, 0xb1, 0x49 }, // 32.D6
+  {  0x1011, 0xb1, 0x4a }, // 32.D5
+  {  0x1011, 0xb1, 0x4b }, // 32.D4
+  {  0x1011, 0xb1, 0x4c }, // 32.D3
+  {  0x1011, 0xb1, 0x4d }, // 32.D2
+  {  0x1011, 0xb1, 0x4e }, // 32.D1
+  {  0x1011, 0xb1, 0x4f }, // 32.D0
+#endif
 };
 
 midio_patch_ain_entry_t midio_patch_ain[MIDIO_PATCH_NUM_AIN] = {
