@@ -25,8 +25,8 @@
 #define MIDIO_PATCH_SIZE (MIDIO_PATCH_DOUT_SIZE + MIDIO_PATCH_DIN_SIZE + MIDIO_PATCH_CFG_SIZE)
 
 
-#define MIDIO_PATCH_NUM_DIN    128
-#define MIDIO_PATCH_NUM_DOUT   128
+#define MIDIO_PATCH_NUM_DIN    (MIOS32_SRIO_NUM_SR*8)
+#define MIDIO_PATCH_NUM_DOUT   (MIOS32_SRIO_NUM_SR*8)
 #define MIDIO_PATCH_NUM_AIN      6
 #define MIDIO_PATCH_NUM_AINSER 128
 #define MIDIO_PATCH_NUM_MATRIX  16
