@@ -1,5 +1,14 @@
 $Id$
 
+MIDIO128 V3.013_pre1
+~~~~~~~~~~~~~~~~~~~~
+
+   o optional support for up to 32 DIN and DOUT shift registers
+     (=256 inputs and 256 outputs)
+     Currently only provided as compile option; increase
+     MIOS32_SRIO_NUM_SR to 32 in mios32_config.h
+
+
 MIDIO128 V3.012
 ~~~~~~~~~~~~~~~
 
